--- a/index-2.html
+++ b/index-2.html
@@ -558,7 +558,7 @@
             <div class="auto-container">
                 <div class="inner-container p_relative d_block theme-color-bg b_radius_10 pt_85 pb_75 pl_60 clearfix">
                     <div class="pattern-layer p_absolute l_0 t_0" style="background-image: url(assets/images/shape/shape-4.png);"></div>
-                    <figure class="image-box p_absolute t_0 r_0"><img src="assets/images/resource/cta-1.jpg" alt=""></figure>
+                    <figure class="image-box p_absolute t_0 r_0"><img src="assets/images/resource/sri.jpg" alt=""></figure>
                     <div class="text pull-left">
                         <h2 class="d_block fw_exbold color-white">Are you Looking for Visa <br />Consultation?</h2>
                     </div>
@@ -934,7 +934,8 @@
                                     <span class="p_absolute r_0 b_0 w_65 h_65 lh_55 text-left b_radius_50 fs_16 color-white fw_bold pl_20 pb_20 z_1">01</span>
                                 </div>
                                 <h3 class="d_block fs_24 lh_30 mb_20">Fill the Form</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
+                                <p> Provide accurate information as required. This might include personal details, travel details, passport information, and past travel history.
+                                    </p>
                             </div>
                         </div>
                     </div>
